fix(style): proper align

--- a/src/screens/now-playing/BasicView.module.scss
+++ b/src/screens/now-playing/BasicView.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  align-items: center;
+  margin: 39px 0 0;
 
   @media all and (orientation: portrait) {
     flex-direction: column;
