--- a/src/screens/now-playing/NowPlayingScreen.module.scss
+++ b/src/screens/now-playing/NowPlayingScreen.module.scss
@@ -86,7 +86,7 @@
   --track-info-min-width: var(--default-track-info-min-width);
   --track-info-min-height: var(--default-track-info-min-height);
   --track-info-max-width: var(--default-track-info-max-width);
-  --track-info-max-height: var(--default-track-info-max-height);
+  --track-info-max-height: var(--albumart-height);
   --seekbar-height: 30px;
   --seekbar-text-font-size: 18px;
 
